syntax = "proto3";

package api.gateway;

option go_package = "github.com/I-m-Surrounded-by-IoT/backend/api/gateway;gateway";

message GetServerReq {}

message GetServerResp { string server_addr = 1; }